--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-certifi==2022.9.24
-charset-normalizer==2.1.1
-flake8==5.0.4
-idna==3.4
+certifi==2024.7.4
+charset-normalizer==3.3.2
+flake8==7.1.0
+idna==3.7
 mccabe==0.7.0
-mypy==0.982
-mypy-extensions==0.4.3
-pycodestyle==2.9.1
-pyflakes==2.5.0
-python-dotenv==0.21.0
-requests==2.28.1
+mypy==1.11.0
+mypy-extensions==1.0.0
+pycodestyle==2.12.0
+pyflakes==3.2.0
+python-dotenv==1.0.1
+requests==2.32.3
 tomli==2.0.1
-types-requests==2.28.11.2
-types-urllib3==1.26.25.1
-typing_extensions==4.4.0
-urllib3==1.26.12
+types-requests==2.32.0.20240712
+types-urllib3==1.26.25.14
+typing_extensions==4.12.2
+urllib3==2.2.2
